--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1127,6 +1127,8 @@ img {
 }
 .img-rounded {
   border-radius: 6px;
+  object-fit: cover;
+  height: 250px;
 }
 .img-thumbnail {
   display: inline-block;
